--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Package Application with Pyinstaller
 
-on:
-  pull_request:
-    branches: [ master ]
+on: workflow_dispatch
 
 jobs:
   build:
